--- a/by-laws/by-law1/index.html
+++ b/by-laws/by-law1/index.html
@@ -414,7 +414,7 @@
 </table>
 <h3 id="22-payment-terms"><a href="#22-payment-terms">2.2. Payment terms</a> <a class="fa fa-question-circle" href="../commentary/by-law1/#22-payment-terms"></a></h3>
 <p>The member's qualifying shares are payable at the rate of twenty dollars ($20.00) cash on admission to membership and the balance in equal and consecutive monthly installments of forty dollars ($40.00) and the allotment of rebates;</p>
-<p>Where a dividend is declared, the amount allocated to the member goes directly against his debt to the cooperative as payment on the capital subscribed and unpaid.</p>
+<p>Where a dividend is declared, the amount allocated to the member goes directly against his/her debt to the cooperative as payment on the capital subscribed and unpaid.</p>
 <h3 id="23-transfer-of-shares"><a href="#23-transfer-of-shares">2.3. Transfer of shares</a> <a class="fa fa-question-circle" href="../commentary/by-law1/#23-transfer-of-shares"></a></h3>
 <p>The common shares are not transferable. This includes the purchase of an organizational member by another organization.</p>
 <p>Preferred shares may be transferred with the approval of the Board upon written request of the transferor.</p>
