Stop using "show of hands" for voting as we're mostly remote.

--- a/by-laws/by-law1/index.html
+++ b/by-laws/by-law1/index.html
@@ -468,7 +468,7 @@
 <p>The meeting may be held by videoconference or teleconference.</p>
 <p>The vote in such a meeting will be taken by email or instant messaging.</p>
 <h3 id="44-vote"><a href="#44-vote">4.4. Vote</a> <a class="fa fa-question-circle" href="../commentary/by-law1/#44-vote"></a></h3>
-<p>The vote is by show of hands unless a majority of members present at the meeting decide otherwise.</p>
+<p>The vote is by positive acknowledgement unless a majority of members present at the meeting decide otherwise.</p>
 <h2 id="chapter-v-board-of-directors"><a href="#chapter-v-board-of-directors">Chapter V: Board of Directors </a><a class="fa fa-question-circle" href="../commentary/by-law1/#chapter-v-board-of-directors"></a></h2>
 <h3 id="51-eligibility-of-members"><a href="#51-eligibility-of-members">5.1. Eligibility of members</a> <a class="fa fa-question-circle" href="../commentary/by-law1/#51-eligibility-of-members"></a></h3>
 <p>To be eligible as a director, a member must:</p>
