Clean up signature.

--- a/misc/signature.htm
+++ b/misc/signature.htm
@@ -7,14 +7,14 @@
     <tr>
         <td>
             <div style="font-size:13px;line-height:18px;padding:3px 0px;margin:0px">
-                Christopher Gervais | President, &#198;gir Cooperative |<br />
-                <a href="tel:514.945.6442" style="color:rgb(0,60,116);text-decoration:none" target="_blank">514.945.6442</a> | <a href="mailto:chris@aegir.coop" style="color:rgb(0,60,116);text-decoration:none" target="_blank">chris@aegir.coop</a> |<br />
-                <a href="http://aegir.coop" style="color:rgb(0,60,116);text-decoration:none" target="_blank">http://aegir.coop</a> |<br/>
+                Christopher Gervais | President, &#198;gir Cooperative<br />
+                <a href="tel:514.945.6442" style="color:rgb(0,60,116);text-decoration:none" target="_blank">514.945.6442</a> | <a href="mailto:chris@aegir.coop" style="color:rgb(0,60,116);text-decoration:none" target="_blank">chris@aegir.coop</a><br />
+                <a href="http://aegir.coop" style="color:rgb(0,60,116);text-decoration:none" target="_blank">http://aegir.coop</a><br/>
             </div>
         </td>
 
-        <td style='align:right'>
-            <img src='http://aegir.coop/_images/aegir_logo_text.png' height='48' width='96' />
+        <td>
+            <a href="http://aegir.coop"><img src='http://aegir.coop/_images/aegir_logo_text.png' height='48' width='96' align="right" /></a>
         </td>
   </tr>
 </table>
