Remove external images from signature.

--- a/misc/signature.htm
+++ b/misc/signature.htm
@@ -1,7 +1,7 @@
 <table cellpadding="0" cellspacing="0" width="100%" style="font-size:medium;height:32px;font-family:Arial;color:rgb(0,60,116);padding:0px;margin:0px">
     <tr style="padding-bottom: 1em">
         <td colspan="2">
-            <img src='http://aegir.coop/_images/spacer.png' height='3' width='100%' />
+            <hr style="border-width: 0 0 3px 0; border-color:rgb(0,60,116);" />
         </td>
     </tr>
     <tr>
@@ -13,8 +13,8 @@
             </div>
         </td>
 
-        <td>
-            <a href="http://aegir.coop"><img src='http://aegir.coop/_images/aegir_logo_text.png' height='48' width='96' align="right" /></a>
+        <td align="right">
+            <a href="http://aegir.coop">&lt;Insert logo here&gt;</a>
         </td>
   </tr>
 </table>
